# lotr-watcher

./: Cargo.toml  Dockerfile
src/: config.rs  email.rs  main.rs  s3.rs  tourdates.rs
src/tourdates/: cellar_darling.rs  lotr_in_concert.rs  soen.rs
