[package]
name = "lotr-watcher"
version = "0.1.0"
authors = ["Renato Zannon <renato@rrsz.com.br>"]

[dependencies]
failure = "0.1.1"
lettre = "0.7.0"
lettre_email = "0.7.0"
reqwest = "0.8.5"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
select = "0.4.2"
blake2 = "0.7.0"
openssl-probe = "0.1.2"
env_logger = "0.5.6"
futures = "0.1"
