[package]
name = "lotr-watcher"
version = "0.1.0"
authors = ["Renato Zannon <renato@rrsz.com.br>"]

[dependencies]
failure = "0.1"
lettre = "0.7"
lettre_email = "0.7"
reqwest = "0.8"
rusoto_core = "0.32"
rusoto_s3 = "0.32"
select = "0.4"
blake2 = "0.7"
openssl-probe = "0.1"
env_logger = "0.5"
futures = "0.1"
tokio-core = "0.1"
